# akx_service

./: .env.example  .gitignore  CHAIN_TOKEN_REFACTOR_SUMMARY.md  README.md  SPEC.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  quickstart_chain_token.sh  validate_chain_token.py
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0789141ace45_remove_chain_full_name_field.py  07fb86469ded_add_merchant_settings_table.py  093cc7a50c77_init.py  4dbe9519315c_add_payment_channels_table.py  707e66b5d06b_rename_deposit_to_recharge.py  7e2dc1b72a53_init.py  91d57fcc08ce_add_webhook_providers_and_remove_chain_.py  9c846f57b69b_add_requested_amount_to_orders.py  9e82cc1731b6_update_webhook_provider_types_replace_.py  9fcfe5fa8962_initial_schema.py  a096f7e01975_add_rpc_url_to_webhook_providers.py  a1b2c3d4e5f6_add_username_field_to_users.py  a73b1b3d27a0_add_ledger_tables.py  b2c3d4e5f6a7_add_support_user_fields_parent_id_permissions.py  b8da3360706c_init.py  c39638285be9_add_exchange_rate_tables_and_order_.py  ccc97a9bfe00_add_merchant_fields_and_fee_config.py  de10130405a2_initial_schema_with_user_wallet_chain_.py  f444c5e90d5d_add_orders_table.py
docs/: CHAIN_TOKEN_SYSTEM.md  PAYMENT_API.md  RECHARGE_SYSTEM.md
docs/demo/: payment_demo.py
src/: __init__.py  celery_app.py  main.py
src/api/: __init__.py  admin.py  auth.py  cashier.py  chains_tokens.py  dashboard.py  deps.py  exchange_rate_sources.py  exchange_rates.py  fee_configs.py  ledger.py  merchant.py  merchant_settings.py  (+10 more)
(+104 files in other folders)
