[project]
name = "akx-service"
version = "0.1.0"
description = "Crypto Payment Gateway Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coincurve @ git+https://github.com/ofek/coincurve.git",
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "aiomysql>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "clerk-backend-api>=1.0.0",
    "tronpy>=0.5.0",
    "web3>=7.0.0",
    "solana>=0.35.0",
    "pyotp>=2.9.0",
    "greenlet>=3.3.0",
    "redis>=5.3.1",
    "celery>=5.6.0",
    "alembic>=1.17.2",
    "python-dotenv>=1.2.1",
    "pymysql>=1.1.2",
    "httpx[socks]>=0.28.1",
    "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
